# elysium

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/io/: wave_format.hpp
src/systems/: sound_system.hpp
